--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+ARCHIVED
+RRCHNM archived this repository in February 2022. Last actual code activity was November 2015. If you need more information or to unarchive this repository, please contact us at webmaster at chnm.gmu.edu
+
+
 Usage: wpstatic [options]
 
 Run the script in the directory where you keep the wp-config.php file.
